fix tables overflow fix footer`s width for mobile orientation

--- a/css/main.css
+++ b/css/main.css
@@ -1273,7 +1273,7 @@ a:visited {
 .entity-page__wrapper{
     display: flex;
     flex-direction: column;
-    min-width: 415px;
+    min-width: 320px;
 }
 
 .entity-page__navigation{
@@ -1448,6 +1448,19 @@ a:visited {
     .tables__table__details-wrapper {
         grid-column: 1/2;
         grid-row: 3/4;
+    }
+}
+
+@media (max-width: 766px) {
+    .tables__table__details-wrapper {
+        overflow: auto;
+    }
+}
+
+@media (max-width: 766px) {
+    .entity-page__footer__wrapper {
+        width: 100%;
+        padding-bottom: 30px;
     }
 }
 
